@@ -8,7 +8,9 @@ ChangeLog
 	  "html" (the default) or csv.
 	- updated sparql.html page.
 	
-	- dispatch new commands: vocabs, mappings
+	- dispatch new commands: vocabs, mappings.  
+	  Parameter "uv" can be used to get both unversioned and versioned URIs: uv=true.  
+	  By default, only unversioned URIs are returned.
 
 2008-12-03   0.2.0.beta2 (20081203)
 	- Dispatch the "root" request to report information about this service, ie.
